--- a/pom.xml
+++ b/pom.xml
@@ -7,20 +7,20 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.9</version>
+			<version>4.13</version>
 			<scope>test</scope>
 		</dependency>
-	<!--	<dependency>
+		<dependency>
 			<groupId>org.seleniumhq.selenium</groupId>
 			<artifactId>selenium-java</artifactId>
-			<version>2.41.0</version>
-		</dependency> -->
-        <dependency>
-            <groupId>com.github.detro.ghostdriver</groupId>
-            <artifactId>phantomjsdriver</artifactId>
-            <version>1.0.4</version>
-            <scope>test</scope>
-        </dependency>		
+			<version>4.3.0</version>
+		</dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.github.detro.ghostdriver</groupId>-->
+<!--            <artifactId>phantomjsdriver</artifactId>-->
+<!--            <version>1.0.4</version>-->
+<!--            <scope>test</scope>-->
+<!--        </dependency>		-->
 	</dependencies>
     <build>
         <plugins>
@@ -28,8 +28,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
             <plugin>
