--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,13 @@
 			<artifactId>selenium-java</artifactId>
 			<version>4.3.0</version>
 		</dependency>
-<!--        <dependency>-->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.11.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <!--        <dependency>-->
 <!--            <groupId>com.github.detro.ghostdriver</groupId>-->
 <!--            <artifactId>phantomjsdriver</artifactId>-->
 <!--            <version>1.0.4</version>-->
