--- a/pom.xml
+++ b/pom.xml
@@ -33,10 +33,10 @@
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
-                <configuration>
-                    <source>1.9</source>
-                    <target>1.9</target>
-                </configuration>
+<!--                <configuration>-->
+<!--                    <source>1.9</source>-->
+<!--                    <target>1.9</target>-->
+<!--                </configuration>-->
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
